# type-reporter

./: .cookiecutter.json  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  tests.yml
docs/: conf.py  index.md  reference.md  usage.md
src/type_reporter/: __init__.py  __main__.py  type_reporter.py
tests/: __init__.py  test_main.py
