[tool.poetry]
name = "type-reporter"
version = "1.0.0"
description = "Type Reporter"
authors = ["Bernhard Kaindl <contact@bernhard.kaindl.dev>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/xenserver-next/type-reporter"
repository = "https://github.com/xenserver-next/type-reporter"
documentation = "https://type-reporter.readthedocs.io"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/xenserver-next/type-reporter/releases"

[tool.poetry.dependencies]
python = "^3.10"
click = ">=8.0.1"
jinja2 = ">=2.1.3"
pandas = ">=2.2.0"
pandas-stubs = ">=2.1.4.231227"
tabulate = "==0.9.0"
toml = "==0.10.2"
types-toml = "==0.10.8.7"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=1.8.0"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=8.0.0"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}

[tool.poetry.scripts]
type-reporter = "type_reporter.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["type_reporter", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 45


[tool.isort]
combine_as_imports = true
force_single_line = true
line_length = 88
lines_after_imports = 2
profile = "black"


[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
